--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container"> 
     <main>
       <section class="cards">
-        <div class="card-daniel card">
+        <div class="card-daniel card grid-dan">
           <img src="./images/image-daniel.jpg" alt="image-daniel" />
           <div class="details">
           <h3 class="name">Daniel Clifford</h3>
@@ -51,7 +51,7 @@
             VR startup.”
           </p>
         </div>
-        <div class="card-jonathan card">
+        <div class="card-jonathan card grid-jo">
           <img src="./images/image-jonathan.jpg" alt="image-jonathan" />
           <div class="details">
           <h3 class="name">Jonathan Walters</h3>
@@ -66,7 +66,7 @@
           </p>
         </div>
 
-        <div class="card-jeanette card">
+        <div class="card-jeanette card grid-jean">
           <img src="./images/image-jeanette.jpg" alt="image-jeanette" />
           <div class="details">
           <h3 class="name">Jeanette Harmon</h3>
@@ -79,7 +79,7 @@
           </p>
         </div>
 
-        <div class="card-patrick card">
+        <div class="card-patrick card grid-pat">
           <img src="./images/image-patrick.jpg" alt="image-patrick" />
           <div class="details">
           <h3 class="name">Patrick Abrams</h3>
@@ -97,7 +97,7 @@
           </p>
         </div>
 
-        <div class="card-kira card">
+        <div class="card-kira card grid-ki">
           <img src="./images/image-kira.jpg" alt="image-kira" />
           <div class="details">
           <h3 class="name">Kira Whittle</h3>
